jswt-parser/src/snapshots/jswt_parser__expression__test__parse_postfix_unary_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_postfix_unary_expression",
                    module: "module/test_parse_postfix_unary_expression",
                    start: 0,
                    end: 51,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_postfix_unary_expression",
                        module: "module/test_parse_postfix_unary_expression",
                        start: 0,
                        end: 51,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_postfix_unary_expression",
                                    module: "module/test_parse_postfix_unary_expression",
                                    start: 0,
                                    end: 51,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_postfix_unary_expression",
                                        module: "module/test_parse_postfix_unary_expression",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_postfix_unary_expression",
                                        module: "module/test_parse_postfix_unary_expression",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_postfix_unary_expression",
                                        module: "module/test_parse_postfix_unary_expression",
                                        start: 16,
                                        end: 51,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Variable(
                                                VariableStatement {
                                                    span: Span {
                                                        file: "test_parse_postfix_unary_expression",
                                                        module: "module/test_parse_postfix_unary_expression",
                                                        start: 18,
                                                        end: 36,
                                                    },
                                                    modifier: Let(
                                                        Span {
                                                            file: "test_parse_postfix_unary_expression",
                                                            module: "module/test_parse_postfix_unary_expression",
                                                            start: 18,
                                                            end: 21,
                                                        },
                                                    ),
                                                    target: Identifier(
                                                        Identifier {
                                                            span: Span {
                                                                file: "test_parse_postfix_unary_expression",
                                                                module: "module/test_parse_postfix_unary_expression",
                                                                start: 22,
                                                                end: 23,
                                                            },
                                                            value: "x",
                                                        },
                                                    ),
                                                    expression: Unary(
                                                        UnaryExpression {
                                                            span: Span {
                                                                file: "test_parse_postfix_unary_expression",
                                                                module: "module/test_parse_postfix_unary_expression",
                                                                start: 33,
                                                                end: 33,
                                                            },
                                                            op: PostDecrement(
                                                                Span {
                                                                    file: "test_parse_postfix_unary_expression",
                                                                    module: "module/test_parse_postfix_unary_expression",
                                                                    start: 33,
                                                                    end: 35,
                                                                },
                                                            ),
                                                            expr: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        span: Span {
                                                                            file: "test_parse_postfix_unary_expression",
                                                                            module: "module/test_parse_postfix_unary_expression",
                                                                            start: 31,
                                                                            end: 33,
                                                                        },
                                                                        value: 99,
                                                                        ty: Binding(
                                                                            "i32",
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                    type_annotation: Some(
                                                        TypeAnnotation {
                                                            span: Span {
                                                                file: "test_parse_postfix_unary_expression",
                                                                module: "module/test_parse_postfix_unary_expression",
                                                                start: 25,
                                                                end: 28,
                                                            },
                                                            ty: Binding(
                                                                "i32",
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                            Variable(
                                                VariableStatement {
                                                    span: Span {
                                                        file: "test_parse_postfix_unary_expression",
                                                        module: "module/test_parse_postfix_unary_expression",
                                                        start: 37,
                                                        end: 49,
                                                    },
                                                    modifier: Let(
                                                        Span {
                                                            file: "test_parse_postfix_unary_expression",
                                                            module: "module/test_parse_postfix_unary_expression",
                                                            start: 37,
                                                            end: 40,
                                                        },
                                                    ),
                                                    target: Identifier(
                                                        Identifier {
                                                            span: Span {
                                                                file: "test_parse_postfix_unary_expression",
                                                                module: "module/test_parse_postfix_unary_expression",
                                                                start: 41,
                                                                end: 42,
                                                            },
                                                            value: "y",
                                                        },
                                                    ),
                                                    expression: Unary(
                                                        UnaryExpression {
                                                            span: Span {
                                                                file: "test_parse_postfix_unary_expression",
                                                                module: "module/test_parse_postfix_unary_expression",
                                                                start: 46,
                                                                end: 46,
                                                            },
                                                            op: PostIncrement(
                                                                Span {
                                                                    file: "test_parse_postfix_unary_expression",
                                                                    module: "module/test_parse_postfix_unary_expression",
                                                                    start: 46,
                                                                    end: 48,
                                                                },
                                                            ),
                                                            expr: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_postfix_unary_expression",
                                                                        module: "module/test_parse_postfix_unary_expression",
                                                                        start: 45,
                                                                        end: 46,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_postfix_unary_expression",
                                                                            module: "module/test_parse_postfix_unary_expression",
                                                                            start: 45,
                                                                            end: 46,
                                                                        },
                                                                        value: "i",
                                                                    },
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                    type_annotation: None,
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
