jswt-parser/src/snapshots/jswt_parser__expression__test__parse_this_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_this_expression",
                    module: "module/test_parse_this_expression",
                    start: 0,
                    end: 25,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_this_expression",
                        module: "module/test_parse_this_expression",
                        start: 0,
                        end: 25,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_this_expression",
                                    module: "module/test_parse_this_expression",
                                    start: 0,
                                    end: 25,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_this_expression",
                                        module: "module/test_parse_this_expression",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_this_expression",
                                        module: "module/test_parse_this_expression",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_this_expression",
                                        module: "module/test_parse_this_expression",
                                        start: 16,
                                        end: 25,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_this_expression",
                                                        module: "module/test_parse_this_expression",
                                                        start: 18,
                                                        end: 23,
                                                    },
                                                    expression: This(
                                                        ThisExpression {
                                                            span: Span {
                                                                file: "test_parse_this_expression",
                                                                module: "module/test_parse_this_expression",
                                                                start: 18,
                                                                end: 22,
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
