jswt-parser/src/snapshots/jswt_parser__expression__test__parse_unary_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_unary_expression",
                    module: "module/test_parse_unary_expression",
                    start: 0,
                    end: 41,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_unary_expression",
                        module: "module/test_parse_unary_expression",
                        start: 0,
                        end: 41,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_unary_expression",
                                    module: "module/test_parse_unary_expression",
                                    start: 0,
                                    end: 41,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_unary_expression",
                                        module: "module/test_parse_unary_expression",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_unary_expression",
                                        module: "module/test_parse_unary_expression",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_unary_expression",
                                        module: "module/test_parse_unary_expression",
                                        start: 16,
                                        end: 41,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Variable(
                                                VariableStatement {
                                                    span: Span {
                                                        file: "test_parse_unary_expression",
                                                        module: "module/test_parse_unary_expression",
                                                        start: 18,
                                                        end: 39,
                                                    },
                                                    modifier: Let(
                                                        Span {
                                                            file: "test_parse_unary_expression",
                                                            module: "module/test_parse_unary_expression",
                                                            start: 18,
                                                            end: 21,
                                                        },
                                                    ),
                                                    target: Identifier(
                                                        Identifier {
                                                            span: Span {
                                                                file: "test_parse_unary_expression",
                                                                module: "module/test_parse_unary_expression",
                                                                start: 22,
                                                                end: 23,
                                                            },
                                                            value: "x",
                                                        },
                                                    ),
                                                    expression: Unary(
                                                        UnaryExpression {
                                                            span: Span {
                                                                file: "test_parse_unary_expression",
                                                                module: "module/test_parse_unary_expression",
                                                                start: 26,
                                                                end: 38,
                                                            },
                                                            op: Minus(
                                                                Span {
                                                                    file: "test_parse_unary_expression",
                                                                    module: "module/test_parse_unary_expression",
                                                                    start: 26,
                                                                    end: 27,
                                                                },
                                                            ),
                                                            expr: Additive(
                                                                BinaryExpression {
                                                                    span: Span {
                                                                        file: "test_parse_unary_expression",
                                                                        module: "module/test_parse_unary_expression",
                                                                        start: 27,
                                                                        end: 38,
                                                                    },
                                                                    left: Multiplicative(
                                                                        BinaryExpression {
                                                                            span: Span {
                                                                                file: "test_parse_unary_expression",
                                                                                module: "module/test_parse_unary_expression",
                                                                                start: 27,
                                                                                end: 33,
                                                                            },
                                                                            left: Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test_parse_unary_expression",
                                                                                            module: "module/test_parse_unary_expression",
                                                                                            start: 27,
                                                                                            end: 28,
                                                                                        },
                                                                                        value: 1,
                                                                                        ty: Binding(
                                                                                            "i32",
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            op: Mult(
                                                                                Span {
                                                                                    file: "test_parse_unary_expression",
                                                                                    module: "module/test_parse_unary_expression",
                                                                                    start: 29,
                                                                                    end: 30,
                                                                                },
                                                                            ),
                                                                            right: Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test_parse_unary_expression",
                                                                                            module: "module/test_parse_unary_expression",
                                                                                            start: 31,
                                                                                            end: 33,
                                                                                        },
                                                                                        value: 10,
                                                                                        ty: Binding(
                                                                                            "i32",
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                    op: Plus(
                                                                        Span {
                                                                            file: "test_parse_unary_expression",
                                                                            module: "module/test_parse_unary_expression",
                                                                            start: 34,
                                                                            end: 35,
                                                                        },
                                                                    ),
                                                                    right: Unary(
                                                                        UnaryExpression {
                                                                            span: Span {
                                                                                file: "test_parse_unary_expression",
                                                                                module: "module/test_parse_unary_expression",
                                                                                start: 36,
                                                                                end: 38,
                                                                            },
                                                                            op: Minus(
                                                                                Span {
                                                                                    file: "test_parse_unary_expression",
                                                                                    module: "module/test_parse_unary_expression",
                                                                                    start: 36,
                                                                                    end: 37,
                                                                                },
                                                                            ),
                                                                            expr: Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "test_parse_unary_expression",
                                                                                            module: "module/test_parse_unary_expression",
                                                                                            start: 37,
                                                                                            end: 38,
                                                                                        },
                                                                                        value: 5,
                                                                                        ty: Binding(
                                                                                            "i32",
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                    type_annotation: None,
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
